# investment-performance-platform

./: .cursorrules  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURRENT_SPRINT_TASKS.md  Cargo.toml  DEVELOPMENT.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  ROADMAP.md  SECURITY.md  TEMPLATES.md  TESTING.md  VISION.md  build.rs  commit_and_push.sh  commit_and_push_both.sh  commit_and_push_fixed.sh  consolidation_summary.md  samconfig.toml  template-development.yml  template-production.yaml  template.yml
.cargo/: config.toml
.cursor/: MIGRATION_GUIDE.md  settings.json
.cursor/rules/: README.md  rust-project-rules.json
.github/workflows/: ci-cd.yml  ci.yml  main.yml  security.yml  test.yml
api-handler/: Cargo.toml  openapi.yaml
api-request-reset/: Cargo.toml  template.yaml
api-request-reset/src/: main.rs
cloudformation/: template.yaml
conversational_advisor/: Cargo.toml
conversational_advisor/examples/: context_management_demo.rs  simple_demo.rs
conversational_advisor/src/: lib.rs
conversational_advisor/src/conversation/: context_manager.rs  mod.rs  topic_detector.rs
conversational_advisor/src/financial_entities/: entity_extractor.rs  mod.rs
data-ingestion/: Cargo.toml
data-ingestion/src/: main.rs  tests.rs
docs/: ARCHITECTURE.md  BRANDING.md  CONVERSATION_SYSTEM.md  DESIGN_SYSTEM.md  DEVELOPMENT_GUIDE.md  DISASTER_RECOVERY.md  DOCUMENTATION.md  ENHANCED_CONTEXT_MANAGEMENT.md  ERROR_HANDLING.md  SECURITY.md  TESTING.md  TOPIC_DETECTION_AND_SEGMENTATION.md  USER_GUIDE.md  api_reference.md  consolidated_documentation.md  cost-optimization-guide.md  developer-guide.md  developer_quickstart.md  future_roadmap.md  platform_overview.md  security-hardening-guide.md  technical_architecture.md
dynamodb-repository/: Cargo.toml
dynamodb-repository/src/: lib.rs
event-processor/: Cargo.toml
events/: README.md  account-event.json  api-gateway-get-items.json  attribution-event.json  batch-account-performance-event.json  batch-portfolio-performance-event.json  benchmark-comparison-event.json  benchmark-event.json  client-event.json  graphql-query.json  performance-calculation-event.json  periodic-returns-event.json  portfolio-event.json  security-event.json  sqs-event.json  transaction-event.json
examples/: api_example.rs  aws_tlh_alerts_example.rs  bedrock_converse.rs  bedrock_invoke_model.rs  blas_test.rs  cfp_challenging_scenarios.rs  cfp_financial_advisor.rs  charitable_giving_example.rs  check_aws_credentials.rs  check_bedrock_access.rs  context_management_demo.rs  conversational_advisor.rs  embedding_demo.rs  financial_advisor_demo.rs  financial_knowledge_demo.rs  graphql_example.rs  graphql_server.rs  graphql_server_simple.rs  household_example.rs  hybrid_nlp_example.rs  list_bedrock_models.rs  local_aws_credentials.rs  minimal_advisor.rs  nlp_example.rs  simple_advisor.rs  simple_conversation_demo.rs  standalone_conversation_demo.rs  streaming_example.rs
graphql-api/: Cargo.toml
graphql-api/src/: main.rs  schema.rs
iam/: lambda-policy.json
infrastructure/: backup.yaml  cloudwatch-dashboard.yaml  waf.yaml
logs/: aws-tlh-alerts.2025-03-07  investment-platform.2025-03-07
performance-calculator/: Cargo.toml  FINANCIAL_SECURITY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  TECHNICAL_DESIGN.md  TESTING.md  config.json  template.yaml
performance-calculator/examples/: advanced_features.rs  factor_model_api_example.rs  factor_model_api_mock.rs  factor_model_example.rs
performance-calculator/scripts/: run_benchmarks.sh
performance-calculator/src/: batch_processor.rs  config.rs  lib.rs  main.rs  tests.rs
performance-calculator/src/calculations/: analytics.rs  audit.rs  benchmark_comparison.rs  benchmarks.rs  cache.rs  config.rs  currency.rs  distributed_cache.rs  error_handling.rs  events.rs  factory.rs  integration.rs  mod.rs  parallel.rs  performance_metrics.rs  periodic_returns.rs  query_api.rs  risk_metrics.rs  scheduler.rs  streaming.rs  twr.rs  visualization.rs
performance-calculator/src/calculations/factor_model/: api.rs  calculator.rs  covariance.rs  error.rs  mod.rs  repository.rs  types.rs  visualization.rs
performance-calculator/src/calculations/portfolio/: mod.rs
performance-calculator/src/calculations/tenant/: cached.rs  dynamodb.rs  metrics.rs  mod.rs  tests.rs
performance-calculator/src/calculations/tests/: audit_tests.rs  cache_tests.rs  complete_integration_test.rs  currency_tests.rs  mod.rs  mwr_tests.rs  phase2_integration_tests.rs  phase3_integration_tests.rs  portfolio_tests.rs  risk_tests.rs  twr_tests.rs
performance-calculator/src/financial_advisor/: client_profiling.rs
performance-calculator/src/resilience/: bulkhead.rs  bulkhead_test.rs  chaos.rs  circuit_breaker.rs  health_check.rs  mod.rs  retry.rs
performance-lambda/: Cargo.toml  README-tenant-isolation.md  README-transactions.md  README.md  coverage.sh
performance-lambda/src/: cache.rs  calculations.rs  chaos_test.rs  integration_tests.rs  load_test.rs  main.rs  pagination.rs  property_tests.rs  repository_tests.rs  resilience_tests.rs  tenant.rs  tenant_example.rs  tenant_tests.rs  timestream_tests.rs  transaction_example.rs  transaction_tests.rs  transactions.rs  validation.rs
scripts/: fix_unused_imports.sh  load_test.py  performance_test.py
shared/: Cargo.toml
shared/src/: config.rs  encryption.rs  error.rs  lib.rs  logging.rs  metrics.rs  models.rs  sanitization.rs  tenant.rs  tests.rs  validation.rs  visualization.rs
shared/src/metrics/: performance.rs
shared/src/repository/: cached.rs  dynamodb.rs  mod.rs  tests.rs  timestream.rs
shared/src/resilience/: bulkhead.rs  circuit_breaker.rs  mod.rs  retry.rs
shared/src/tenant/: mod.rs
src/: LOGGING.md  algorithmic_tlh.rs  api.rs  error.rs  factor_model.rs  lib.rs  logging.rs  main.rs  model_portfolio.rs  portfolio_rebalancing.rs  visualization.rs
standalone_demo/: Cargo.toml
tests/: integration_tests.rs  mock_streaming_test.rs  nlp_tests.rs  streaming_responses.rs
timestream-repository/: Cargo.toml
timestream-repository/src/: lib.rs
(+105 files in other folders)
