[package]
name = "api-request-reset"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Lambda function to reset API request counters for multi-tenant support"

[dependencies]
lambda_runtime = "0.8.0"
aws_lambda_events = "0.8.0"
aws-sdk-dynamodb = "0.24.0"
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
performance-calculator = { path = "../performance-calculator" } 