[package]
name = "conversational_advisor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10.2"
thiserror = "1.0.40"

[dev-dependencies]
tempfile = "3.5.0"

[[example]]
name = "simple_demo"
path = "examples/simple_demo.rs"

[[example]]
name = "context_management_demo"
path = "examples/context_management_demo.rs"
