[package]
name = "data-ingestion"
version = "0.1.0"
edition = "2021"
authors = ["Investment Performance Team"]
description = "Data Ingestion for Investment Performance Application"

[dependencies]
aws-config = "0.55.3"
aws-sdk-dynamodb = "0.28.0"
aws-sdk-sqs = "0.28.0"
aws-lambda-events = { version = "0.8.3", features = ["apigw"] }
lambda_runtime = "0.8.1"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["fmt", "json", "env-filter"] }
chrono = { version = "0.4.26", features = ["serde"] }
uuid = { version = "1.4.0", features = ["v4", "serde"] }
thiserror = "1.0.40"
anyhow = "1.0.71"
async-trait = "0.1.68"
shared = { path = "../shared" }

[[bin]]
name = "bootstrap"
path = "src/main.rs" 