[package]
name = "dynamodb-repository"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.55.3"
aws-sdk-dynamodb = "0.28.0"
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tracing = "0.1.37"
uuid = { version = "1.3.3", features = ["v4", "serde"] } 