[package]
name = "graphql-api"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "5.0.7"
async-graphql-lambda = "5.0.7"
aws-config = "0.55.3"
aws-lambda-events = { version = "0.8.1", default-features = false, features = ["apigw"] }
aws-sdk-dynamodb = "0.28.0"
chrono = { version = "0.4.26", features = ["serde"] }
lambda_runtime = "0.8.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.3.3", features = ["v4", "serde"] }

# Local dependencies
dynamodb-repository = { path = "../dynamodb-repository" }
timestream-repository = { path = "../timestream-repository" } 