[package]
name = "performance-calculator"
version = "0.1.0"
edition = "2021"
authors = ["Investment Performance Team"]
description = "Performance Calculator for Investment Performance Application"

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
aws-config = "0.55.0"
aws-sdk-dynamodb = "0.27.0"
aws-sdk-sqs = "0.27.0"
aws-sdk-timestream-write = "0.27.0"
aws-sdk-timestream-query = "0.27.0"
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.1", features = ["v4", "serde"] }
thiserror = "1.0.40"
async-trait = "0.1.68"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
rand = "0.8.5"
futures = "0.3.28"
once_cell = "1.17.1"
md5 = "0.7.0"
jsonwebtoken = "8.3.0"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4.2"
mockall = "0.11.4"
tempfile = "3.5.0" 