[package]
name = "performance-calculator"
version = "0.1.0"
edition = "2021"
authors = ["Investment Performance Team One"]
description = "Performance Calculator for Investment Performance Application"

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
aws-config = "1.0.1"
aws-sdk-dynamodb = "1.66.0"
aws-sdk-sqs = "1.60.0"
aws-sdk-timestreamwrite = "1.60.0"
aws-sdk-timestreamquery = "1.63.0"
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
thiserror = "1.0.40"
async-trait = "0.1.68"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
rand = "0.8"
futures = "0.3.28"
once_cell = "1.17.1"
md5 = "0.7.0"
jsonwebtoken = "8.3.0"
anyhow = "1.0"
rust_decimal = { version = "1.0", features = ["serde"] }
rust_decimal_macros = "1.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde_yaml = "0.9.21"
criterion = { version = "0.5.1", features = ["async_tokio"] }
redis = { version = "0.23.0", features = ["tokio-comp", "connection-manager"] }
lazy_static = "1.4"
env_logger = "0.10"
shared = { path = "../shared" }
aws_lambda_events = "0.8.0"
lambda_runtime = "0.8.1"
ndarray = { version = "0.15.6", features = ["serde", "blas"] }
ndarray-linalg = { version = "0.16.0", features = ["openblas-system"] }
blas-src = { version = "0.10", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
statrs = "0.16.0"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11.4"
tempfile = "3.5.0" 