[package]
name = "performance-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.55.3"
aws-lambda-events = { version = "0.8.1", default-features = false, features = ["sqs"] }
aws-sdk-dynamodb = "0.28.0"
aws-sdk-sqs = "0.28.0"
aws-sdk-timestreamwrite = "0.28.0"
aws-sdk-timestreamquery = "0.28.0"
chrono = { version = "0.4.26", features = ["serde"] }
lambda_runtime = "0.8.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.3.3", features = ["v4", "serde"] }
futures = "0.3.28"
rand = "0.8.5"

# Local dependencies
dynamodb-repository = { path = "../dynamodb-repository" }
timestream-repository = { path = "../timestream-repository" }

[[bin]]
name = "performance-lambda"
path = "src/main.rs"

[[bin]]
name = "load_test"
path = "src/load_test.rs"

[[bin]]
name = "chaos_test"
path = "src/chaos_test.rs" 