[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.55.3"
aws-sdk-dynamodb = "0.28.0"
aws-sdk-sqs = "0.28.0"
base64 = "0.21.0"
lambda_runtime = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_dynamodb = "0.9.0"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.9.5"
async-trait = "0.1.68"
lru = "0.10.0"
plotters = { version = "0.3.5", features = ["all_series", "all_elements"] }
jsonwebtoken = "8.3.0"
rand = "0.8.5"
rust_decimal = "1.36.0"

[dev-dependencies]
mockall = "0.11.4"
tokio-test = "0.4.2"
aws-smithy-http = "0.55.3"
aws-smithy-types = "0.55.3" 
