[package]
name = "timestream-repository"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.55.3"
aws-sdk-timestreamwrite = "1.60.0"
aws-sdk-timestreamquery = "1.63.0"
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tracing = "0.1.37"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
rand = "0.8.5" 